Revise WP_proactive and implement circle follow. 210619

--- a/param/GM_Config.cfg
+++ b/param/GM_Config.cfg
@@ -112,10 +112,11 @@
 #20210524WP/WPr3m_s050m.dat
 #半径2.5mの円弧と直線
 #20210524WP/WPr2_5m_s050m.dat
+20210524WP/WPr2_5m_s050m_c.dat
 #最低速度を0.2m/sとしたキーパ動作の再現
 #20210524WP/Replay_Keeper_Movement_0_2.dat
 #テストコース
-20210524WP/WP_test_route.dat
+#20210524WP/WP_test_route.dat
 #テストコース(切り返し部WPの修正なし。ただし平地側の最後のバックに限り除去)
 #20210524WP/WP_test_route_keeper.dat
 
